Fix UI issue on mobiles

--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -19,11 +19,6 @@
     margin-left: -294px;
   }
 }
-@media only screen and (max-width: 992px) {
-.site-main .skills {
-  display: none;
-}
-}
 
 @media only screen and (max-width: 792px) {
   .site-main .about .about-title h2 > span {
